--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,9 +64,8 @@ body {
 }
 
 .portrait-img{
-    border-radius: 5px;
-    max-width: 180px;
+    
+    max-width: 100%;
     height: auto;
-    padding: 0px;
-    margin: 0px;
+    margin: auto;
 }
