--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,15 @@ html {
 
 /* General site-wide styling */
 
+a{
+    color: #000000;
+    text-decoration: none;
+}
+a:hover{
+    color: #000000;
+    text-decoration: underline;
+}
+
 body {
     font-family: "Roboto Mono", sans-serif; /* Site-wide font with fall-back */
     font-size: 1.25rem;
@@ -21,16 +30,14 @@ body {
 }
 .image-wrap{ /* Styling for image-wrapper, useful on multiple pages */
     float: left;
-    max-width: 40%;
     height: auto;
-    padding-right: 3.5%;
-    padding-bottom: 3.5%;
+    padding: 2.5%;
 }
 .left-col-style{ /* Styling the content of the left-hand bootstrap grid cols */
-    max-width: 90%;
+    max-width: 95%;
     padding: 1%;
 }
-.center-col-style{ /* Styling the content of the cent bootstrap grid col */
+.center-col-style{ /* Styling the content of the center bootstrap grid col */
     
     max-width: 90%;
     padding: 1%;
@@ -65,6 +72,7 @@ body {
 /* NavBar site-wide styles */
 
 #navbar-styles{
+    height: 5vh;
     font-size: 1.25rem;
 }
 
@@ -104,7 +112,21 @@ body {
     margin: 2.5%;
 }
 .btn-book-style{
-    padding: 0.5rem;
+    max-width: 95%;
+    padding: 0.25rem;
     border: 1px;
 
+}
+
+/* Media-query CSS for smaller screen-sizes */
+
+@media screen and(max-width: 640px){
+
+    .portrait-img{ 
+
+        max-width: 20%;
+        padding: 2.5%;
+        height: auto;
+        margin: auto;
+    }
 }
