--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -158,6 +158,7 @@ body {
         margin: auto;
     }
     /* Styling links on smaller screens, to make them more visible. */
+    
     a {
         text-decoration: underline;
         color: #ff0000;
@@ -174,5 +175,9 @@ body {
     .flag-toggle-icon{
         width: 100%;
         height: auto;
+    }
+    .image-wrap{ /* Removing float: left style that caused issues with display on small screens. */
+        height: auto;
+        padding: 2.5%;
     }
 }
